added reviews controller and views

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -7,4 +7,5 @@
   <%= f.input :phone_number %>
   <%= f.submit %>
 <% end %>
+<p><%= link_to 'Back to all restaurants', restaurants_path %></p>
 </div>
