--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,5 +3,13 @@
   <p>Cuisine: <%= @restaurant.category.capitalize %></p>
   <p>Address: <%= @restaurant.address %></p>
   <p>Phone Number: <%= @restaurant.phone_number %></p>
+  <p><strong>Reviews:</strong></p>
+    <ul class="list-group">
+      <% @restaurant.reviews.each do |review| %>
+        <li class="list-group-item"><%= review.content %>.  Rating: <%= review.rating %></li>
+      <% end %>
+    </ul>
+    <br>
+  <p><%= link_to 'Leave a new review', new_restaurant_review_path(@restaurant.id)  %></p>
   <p><%= link_to 'Back to all restaurants', restaurants_path %></p>
 </div>
