--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,11 +1,4 @@
 <div class="container">
 <h1>Add a new restaurant</h1>
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :category %>
-  <%= f.input :address %>
-  <%= f.input :phone_number %>
-  <%= f.submit %>
-<% end %>
-<p><%= link_to 'Back to all restaurants', restaurants_path %></p>
+<%= render "simple_form", restaurant: @restaurant %>
 </div>
