--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,5 @@
 <div class='container'>
   <h1>Add a review</h1>
-  <%= simple_form_for [@restaurant, @review] do |f| %>
-    <%= f.input :content %>
-    <%= f.input :rating %>
-    <%= f.submit "Submit review", class: "btn btn-primary" %>
-  <% end %>
+  <%= render "simple_form", restaurant: @restaurant, review: @review %>
   <p><%= link_to 'Back to restaurant', restaurant_path(@restaurant.id) %></p>
 </div>
