--- a/app/views/restaurants/_simple_form.html.erb
+++ b/app/views/restaurants/_simple_form.html.erb
@@ -5,3 +5,9 @@
   <%= f.input :phone_number %>
   <%= f.submit %>
 <% end %>
+
+<%# <%= simple_form_for [restaurant, review] do |f| %>
+    <%# <%= f.input :content %>
+    <%# <%= f.input :rating %>
+    <%# <%= f.submit "Submit review", class: "btn btn-primary" %> 
+  <%# <% end %>
