--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,9 +6,14 @@
   <p><strong>Reviews:</strong></p>
     <ul class="list-group">
       <% @restaurant.reviews.each do |review| %>
-        <li class="list-group-item"><%= review.content %>.  Rating: <%= review.rating %></li>
+        <li class="list-group-item"><%= review.content %>. Rating: <%= review.rating %></li>
       <% end %>
     </ul>
     <br>
-  <p><%= link_to 'Leave a new review', new_restaurant_review_path(@restaurant.id)  %></p>
+    <p><strong>Leave a review:</strong></p>
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit "Submit review", class: "btn btn-primary" %>
+  <% end %>
 </div>
