all actions completed

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
 <h1>Add a new restaurant</h1>
-<%= render "simple_form", restaurant: @restaurant %>
+<%= render "new_restaurant", restaurant: @restaurant %>
 </div>
