--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,9 +11,5 @@
     </ul>
     <br>
     <p><strong>Leave a review:</strong></p>
-  <%= simple_form_for [@restaurant, @review] do |f| %>
-    <%= f.input :content %>
-    <%= f.input :rating %>
-    <%= f.submit "Submit review", class: "btn btn-primary" %>
-  <% end %>
+  <%= render 'reviews/new_review', { restaurant: @restaurant, review: @review } %>
 </div>
