--- a/app/views/restaurants/_new_restaurant.html.erb
+++ b/app/views/restaurants/_new_restaurant.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(restaurant) do |f| %>
   <%= f.input :name %>
-  <%= f.input :category %>
+  <%= f.input :category, collection: ["Chinese", "Italian", "Japanese", "French", "Belgian"] %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
   <%= f.submit %>
